# Learn-OpenCV-4-By-Building-Projects-Second-Edition

./: .gitignore  README.md
Chapter_02/: CMakeLists.txt  README.md  main.cc  sample2.cc  sample3.cc
Chapter_03/: CMakeLists.txt  main.cc  sample1.cc  sample2.cc  sample3.cc  sample4.cc  sample5.cc
Chapter_04/: main.cc
Chapter_05/: CMakeLists.txt  README.md  main.cc
Chapter_05/data/: light.pgm
Chapter_05/utils/: MultipleImageWindow.cc  MultipleImageWindow.hpp  multiple_image_window.cc  multiple_image_window.h
Chapter_06/: CMakeLists.txt  main.cc  main.cpp
Chapter_06/utils/: multiple_image_window.cc  multiple_image_window.h
Chapter_07/: CMakeLists.txt  earDetector.cc  overlayFacemask.cc  overlayMoustache.cc  overlayNose.cc  overlaySunglasses.cc
Chapter_08/: CMakeLists.txt  background_subtraction.cc  dilation.cc  erosion.cc  frameDifferencing.cc  morphological_operations.cc
Chapter_09/: CMakeLists.txt  camshift_tracker.cc  colored_object_tracker.cc  farneback_tracker.cc  good_features_to_track.cc  harris_corners_tracker.cc  lucas_kanade_tracker.cc
Chapter_10/: CMakeLists.txt  segment.cc  segment.cpp  segmentOcr.cpp  segmentOcrHigh.cpp  segment_ocr_high.cc
Chapter_11/: CMakeLists.txt  README.md  detection.cc  ocr.cc
Chapter_12/: CMakeLists.txt  main.cc  resnet_ssd_face.cc
