CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Chapter2)

SET(CMAKE_CXX_STANDARD 11)

IF(EXISTS ${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
  include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
  conan_basic_setup()
ENDIF()

# Requires OpenCV
FIND_PACKAGE(OpenCV 4.0.0 REQUIRED )
MESSAGE("OpenCV version : ${OpenCV_VERSION}")

ADD_EXECUTABLE(sample1 sample1.cc)
TARGET_LINK_LIBRARIES(sample1 ${OpenCV_LIBS})

ADD_EXECUTABLE(sample2 sample2.cc)
TARGET_LINK_LIBRARIES(sample2 ${OpenCV_LIBS})

ADD_EXECUTABLE(sample3 sample3.cc)
TARGET_LINK_LIBRARIES(sample3 ${OpenCV_LIBS})

ADD_EXECUTABLE(${PROJECT_NAME} main.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})