cmake_minimum_required(VERSION 3.0)

PROJECT(DeepLearning_ch12)

set(CMAKE_CXX_STANDARD 17)

# Requires OpenCV v4.0 or later
FIND_PACKAGE(OpenCV 4 REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} main.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CONAN_LIBS} ${OPENCV_LIBS} -lprotobuf)

ADD_EXECUTABLE(${PROJECT_NAME}_face resnet_ssd_face.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_face ${CONAN_LIBS} ${OPENCV_LIBS} -lprotobuf)
